# forcefield

./: .dockerignore  Cargo.toml  Dockerfile  architecture.md  connection_file  container_run.sh  full_down.sh  peek_generators.sh  peek_ip_routes.sh  peek_wg.sh  reset.sh  test_connection.sh  upload.sh
.devcontainer/: Dockerfile  a.sh  b.sh  devcontainer.json  instructions.txt  main.sh
src/: main.rs
src/citadel/: control_connection.rs  handshaker.rs  main.rs  mod.rs  state.rs
src/citadel/ui/: connect_to_generator_screen.rs  control_connection_screen.rs  cursor.rs  dialogue_box.rs  generator_control_screen.rs  main_options_screen.rs  mod.rs  setup_route.rs  ui_main.rs
src/common/: cmd.rs  commands.rs  errors.rs  ip.rs  mod.rs  setup_handshake.rs  wireguard.rs
src/generator/: config.rs  init_config.rs  main.rs  mod.rs  on_wakeup.rs  receive_connections.rs
